# protornn

./: .gitignore  pyproject.toml
scripts/: get_data.sh
src/protornn/: cli.py  data.py  model.py  run.py  stopper.py  tokenizer.py  train.py  utils.py
