[project]
name = "protornn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.4",
    "torch>=2.6.0",
]
[project.optional-dependencies]
train = [
    "tqdm>=4.67.1",
    "tensorboard>=2.19.0",
    "wonderwords>=2.2.0",
]
