[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "protornn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "numpy>=2.2.4",
    "torch>=2.6.0",
]
[project.optional-dependencies]
train = [
    "tqdm>=4.67.1",
    "tensorboard>=2.19.0",
    "wonderwords>=2.2.0",
]
[project.scripts]
protornn = "protornn.cli:cli"

[dependency-groups]
dev = [
    "ipython>=9.2.0",
]
